# drug_pipeline

./: .gitignore  MANIFEST.in  README.md  setup.cfg
drug_pipeline/: adhoc_utils.py  config.py
drug_pipeline.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
output/: results.json
sql_queries_exercice/: ventes_par_jour.sql  ventes_par_type_produit.sql
tests/: test_pipeline.py
