[metadata]
name = drug_pipeline
version = 0.0.1
author = Hamza Massaoudi
author_email = massaoudi.ham@gmail.com
description = Creation of data pipeline
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/hamzamassaoudi/drug_pipeline
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent
[options]
packages = find:
python_requires = >=3.8
install_requires = 
    pandas==1.5.0
include_package_data = True